# agent-catalog-example

./: .env  .gitignore  .pre-commit-config.yaml  README.md  my_travel_agent.py  my_travel_app.py  my_travel_flow.py  pyproject.toml  requirements.txt
.out/: catalog.json
examples/travel_agent/: .env  .env.example  README.md  app.py  main.sh  pyproject.toml  quickstart.sh
examples/travel_agent/my_servers/: agent_flow.py  agent_server.py  rewards_spec.json
examples/travel_agent/my_tools/: python_travel_tools.py  rewards_service.yaml
examples/travel_agent/prompts/: answer_questions.prompt  ask_to_continue.prompt  find_travel_routes.prompt  format_flight_plan.prompt  get_closest_airport.prompt  get_user_intent.prompt  get_user_location.prompt  handle_failed_task.prompt  manage_rewards.prompt  negative_intent.prompt  return_flight_plan.prompt  route_finding.prompt  suggest_destination.prompt
examples/travel_agent/services/: agent_flow.py  agent_server.py  rewards_server.py  rewards_spec.json
examples/travel_agent/setup/: ingest_blogs.py
examples/travel_agent/tests/: test_agent_flow.py
examples/travel_agent/tools/: blogs_from_interests.yaml  find_direct_flights.sqlpp  find_one_layover_flights.sqlpp  python_travel_tools.py  rewards_service.yaml
iq_agent/: creds.sh  quickstart.sh
iq_agent/prompts/: ask_to_continue.prompt  generate_sql_query_and_execute.prompt
iq_agent/services/: agent_flow.py  agent_server.py  base_agent.py  report_agent_flow.py  simple_iq_agent.py  simple_iq_agent_using_base_agent.py
iq_agent/tools/: python_NL2Charts_tool.py  python_NL2SQL_tools.py  python_NL2VectorSearch_tool.py
recommendation_system/: README.md  api.json  app.py  pyproject.toml  pyproject.toml-e  server.py
recommendation_system/.agent-catalog/: prompt-catalog.json  tool-catalog.json
recommendation_system/dataset/: smartphones.csv
recommendation_system/prompts/: filter_level2.prompt  get_price.prompt  get_ram.prompt  get_rating.prompt  get_storage.prompt
recommendation_system/setup/: create_index.py  data_setup.py  setup_script.sh  vectorize.py
recommendation_system/tools/: contains_in.py  custom_membership.py  get_relevant_display.yaml  get_relevant_mobile.sqlpp  search_product.yaml  sqlpp_query.sqlpp
starter_agent/: .env.example  agent.py  pyproject.toml
starter_agent/prompts/: jinja_prompt.jinja  raw_prompt.prompt
starter_agent/tools/: http_request.yaml  python_function.py  semantic_search.yaml  sqlpp_query.sqlpp
starter_agent/utils/: __init__.py  tasks.py  user.py
tests/travel_agent/: test_agent_flow.py
travel_agent/: .env.example  README.md  app.py  notebook.ipynb  pyproject.toml  quickstart.sh
travel_agent/.agent-catalog/: prompt-catalog.json  tool-catalog.json
travel_agent/.rosetta-catalog/: meta.json  prompt-catalog.json  test.json  tool-catalog.json
travel_agent/evaluate/: ragas.py
travel_agent/prompts/: answer_questions.prompt  ask_to_continue.prompt  format_flight_plan.prompt  get_closest_airport.prompt  get_user_intent.prompt  get_user_location.prompt  handle_failed_task.prompt  manage_rewards.prompt  negative_intent.prompt  return_flight_plan.prompt  suggest_destination.prompt
travel_agent/services/: agent_flow.py  agent_server.py
travel_agent/services/utils/: tasks.py  user.py
travel_agent/setup/: create_index.py
travel_agent/src/: app.py
travel_agent/src/agent/: agent_a.py  agent_c.py
travel_agent/src/endpoints/: agent_server.py
travel_agent/src/resources/agent_a/: __init__.py  tools.py
travel_agent/src/resources/agent_c/prompts/: get_closest_airport.prompt  manage_rewards.prompt
travel_agent/src/resources/agent_c/tools/: python_travel_tools.py
travel_agent/src/resources/prompts/: find_travel_routes.prompt  get_user_intent.prompt  handle_failed_task.prompt
travel_agent/src/resources/tools/: find_direct_flights.sqlpp  python_travel_tools.py  rewards_service.yaml
travel_agent/tests/: test_controlflow.py
travel_agent/tools/: python_travel_tools.py  talk_to_user_tool.py
travel_tools/: blogs_from_interests.yaml  one_layover_flights.sqlpp  python_travel_tools.py
