[project]
name = "agent-catalog-example"
version = "0.1.0"
description = "Sample agentic workflows built with help from Couchbase Agent Catalog."
repository = "https://github.com/couchbaselabs/rosetta-example"
authors = [
    { name = "Glenn Galvizo", email = "glenn.galvizo@couchbase.com" },
]
readme = "README.md"

[tool.ruff]
line-length = 120
lint.select = ["F", "B", "I", "SIM"]
show-fixes = true

[tool.ruff.lint.isort]
no-sections = true
force-single-line = true
lines-between-types = 1
force-wrap-aliases = true
split-on-trailing-comma = false
